2008-05-28  Thomas Thurman  <tthurman@gnome.org>

        * src/core/prefs.c (handle_preference_update_string,
        meta_prefs_remove_listener, queue_changed): Make disabling
        gconf work again.  Closes #530870.

2008-05-26  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.34.

2008-05-26  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.21 release.

2008-05-26  Thomas Thurman  <tthurman@gnome.org>

        * src/Makefile.am: added in two files needed for Iain's
          changes earlier to work in a release tarball

2008-05-24  Iain Holmes  <iain@gnome.org>

	* src/compositor/compositor-xrender.c: Add Dropdown menu atoms so we
	can add shadows to them. Fixes #517442
	Handle tooltips as well. Fixes #517524

2008-05-24  Iain Holmes  <iain@gnome.org>

	* src/compositor/compositor.c: Check the compositor isn't NULL before 
	dereferencing it. Fixes #534569
	(meta_compositor_get_window_pixmap): Actually return a value

2008-05-19  Iain Holmes  <iain@gnome.org>

	* src/core/window.c: Applied patch from Ed Catmur to fix #528787

2008-05-19  Iain Holmes  <iain@gnome.org>

	* src/include/frame.h
	* src/include/display.h
	* src/include/xprops.h
	* src/include/compositor.h
	* src/include/types.h
	* src/include/window.h
	* src/include/errors.h
	* src/include/screen.h: New basic public API for compositor.

	* src/compositor/*: Separate the compositor out into its own separate
	directory and set it up for backends. Initial XRender backend.

	* src/core/compositor.[ch]: Remove

	* src/core/frame.h
	* src/core/screen.h
	* src/core/display.h
	* src/core/window.h: Rename to -private.h so as not to clash with the
	new files in include

	* src/core/delete.c
	* src/core/workspace.h
	* src/core/stack.[ch]
	* src/core/keybindings.[ch]
	* src/core/errors.c
	* src/core/effects.[ch]
	* src/core/core.c
	* src/core/group.h
	* src/core/edge-resistance.[ch]
	* src/core/window-props.[ch]
	* src/core/constraints.h
	* src/core/bell.[ch]