@@ -1,3 +1,7 @@
+2008-05-30  Thomas Thurman  <tthurman@gnome.org>
+
+        * src/core/window-props.h: commenting
+
 2008-05-28  Thomas Thurman  <tthurman@gnome.org>
 
         * src/core/prefs.c (handle_preference_update_string,
